--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 4px;
+    padding-left: 0;  
+    padding-right: 0;
   }
 
   .nav-links {
