--- a/index.html
+++ b/index.html
@@ -79,16 +79,17 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 4px;
-    padding-left: 0;  
-    padding-right: 0;
+    padding-left: 24px;  
+    padding-right: 24px;
   }
 
   .nav-links {
     display: flex;
     gap: 16px;
     justify-content: flex-start;
-    margin-left: 0;      /* 清除外边距 */
-    padding-left: 0;     /* 清除内边距 */
+    width: 100%
+    padding-left: 0;     
+    margin: 0;
   }
 }
 
