--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     display: flex;
     gap: 16px;
     justify-content: flex-start;
-    width: 100%
+    width: 100%;
     padding-left: 0;     
     margin: 0;
   }
